--- a/index.html
+++ b/index.html
@@ -252,16 +252,16 @@
 
                 <div class="skill-subHeading">
                     <p>
-                        Educational Technology Enthusiast: Developed a fully functional ed-tech platform called "StudyNote," showcasing my ability to contribute to the creation, consumption, and rating of educational content using the MERN stack.
+                        Educational Technology Enthusiast: Developed a fully functional ed-tech platform called <span class="name">StudyNote </span>showcasing my ability to contribute to the creation, consumption, and rating of educational content using the MERN stack.
                     </p>
                     <p>
-                        GitHub Proficiency: Introduced "Dev Detective," a web application that serves as a GitHub profile details viewer, reflecting my skills in HTML, CSS, and JavaScript.
+                        GitHub Proficiency: Introduced <span class="name">Dev Detective</span> a web application that serves as a GitHub profile details viewer, reflecting my skills in HTML, CSS, and JavaScript.
                     </p>
                     <p>
-                        ReactJS Project: Designed and implemented "RandomGifGenerator," a React-based web application that demonstrates my commitment to creating engaging user experiences.
+                        ReactJS Project: Designed and implemented <span class="name"> RandomGifGenerator</span>a React-based web application that demonstrates my commitment to creating engaging user experiences.
                     </p> 
                     <p>
-                        Weather App Development: Built a "Weather" web app using HTML, CSS, and JavaScript, integrating with the OpenWeatherMap API to provide real-time weather information.
+                        Weather App Development: Built a <span class="name">Weather</span> web app using HTML, CSS, and JavaScript, integrating with the OpenWeatherMap API to provide real-time weather information.
                     </p>
                         
                     
